source/stylesheets/sections/workpages.css.scss
/* ... */
.medium-quote {
	.quote-content {
		font-size: 32px;
		line-height: 38px;
		
		@media  only screen and (max-width: 960px) {
			font-size: 26px;
			line-height: 32px;
		}
	}
	.quote-author {
		font-size: 23px;
		line-height: 28px;
		
		@media  only screen and (max-width: 960px) {
			font-size: 18px;
			line-height: 22px;
		}
	}
}

.small-title {
	font-size: 32px;
	line-height: 38px;
	text-align: center;
	
	&.blue {
		color: #A1BAD8;	

		a, a:visited {
			color: #A1BAD8;
			text-decoration: underline;
		}
	}
	
	&.white {
		color: #FFFFFF;	
	}
}

.partners {
	background-color: #F9F9F9;
	text-align: center;
	padding-bottom: 30px; 
	
	@media  only screen and (max-width: 760px) {
		margin-top: 500px;
	}
	
	.small-title {
		color: #9B9B9B;
		margin-bottom: 30px;
		padding-top: 60px;
	}
	
	table.non-mobile {
		width: 100%;
		
		@media  only screen and (max-width: 500px) {
			display: none !important;
		}
		
		tbody {
			tr {
				td {
					text-align: center;
					padding: 25px 15px;
					vertical-align: middle;
					img {
						margin: 0 auto;	
					}
				}
			}
		}
	}
	
	ul.mobile {
		display: none;
		list-style: none;
		width: auto;
		margin: 0 auto;
		
		@media  only screen and (max-width: 500px) {
			display: inline-block !important;
		}
		
		li {
			margin: 0 auto;
	        width: 100%;
			margin-bottom: 40px;
			text-align: center;
			img {
				margin: 0 auto;	
			}
		}
	}
	
}


.office-hours {
	width: 100%;
	background-color: #3B6FA8;
	text-align: center;
	padding: 35px 10px;
	
	.small-title {
		font-weight: 100;	
		@media only screen and (max-width: 615px) {
			font-size: 28px;
			line-height: 34px;
		}
		@media only screen and (max-width: 520px) {
			font-size: 24px;
			line-height: 28px;
		}
		@media only screen and (max-width: 449px) {
			font-size: 22px;
			line-height: 28px;
		}
	}
	
}


.hero-video-container {
	width: 100%;
	background-color: black;
	position: relative;
	.video-player {
		margin: 0 auto;	
		width: 894px;
		display: none;
		padding: 20px 20px;
		@media only screen and (max-width: 894px) {
			width: auto;	
		}
	}
	.video-banner {
		width: 100%;
		min-height: 520px;
		position: relative;
		opacity: 1;
		transition: opacity 300ms ease-in-out;
		
		.video-background {
			background-size: cover;
			width: 100%;
			min-height: 520px;		
			position: absolute;
			left: 0;
			top: 0;
			z-index: 1;
			
			@media only screen and (max-width: 760px) {
				top: 500px;
				background-position-x: center;
			}
			
			@media only screen and (min-width: 1780px) {
				background-position-y: center;
			}
		}
		
		&#res-proj .video-background{
			background-image: image-url('healthcare/res-video-image.png');	
		}
		
		&#juhan-vid .video-background {
			background-image: image-url('healthcare/juhan_vid.png');	
		}
		
		.video-text {
			z-index: 20;
			color: white;
			max-width: 40%;	
			position: absolute;
			left: 60px;
			top: 40px;
			
			@media only screen and (max-width: 760px) {
				max-width: calc(100% - 40px);	
				left: 20px;
			}
			
			.video-title {
				z-index: 20;
				font-size: 50px;
				line-height: 55px;
				min-width: 460px;
				margin-bottom: 20px;
				@media only screen and (max-width: 760px) {
					min-width: 0px;	
					padding-right: 20px;
				}
			}
			.video-summary {
				z-index: 20;
				min-width: 329px;
				width: 70%;	
				@media only screen and (max-width: 750px) {
					width: calc(100%);
					min-width: 0px;
				}
				p {
					font-size: 22px;
					line-height: 30px;	
					font-weight: 100;
				}
			}
		}
		
		.video-control-button {
			z-index: 10;
			width: 100px;
			height: 100px;
			cursor: pointer;
			transform: scale(1,1);
			transition: 300ms ease-in-out;
			position: absolute;
			left: 60%;
			bottom: 210px;
			&:hover {
				transform: scale(1.2, 1.2);	
			}
			
			@media only screen and (max-width: 940px) {
				left: 75%;
			}
			
			@media only screen and (max-width: 760px) {
				left: calc(50% - 50px);
				bottom: -375px;
			}
			
			.play {
				width: 100%;
				height: 100%;
				background: image-url('play_button.png');
			}
		}
	}
}


#products {
	#article-header {
		height: 800px;
		background-image: image-url('products/hero.png');
		background-size: cover;
		background-repeat:none;
		
		
		
		h1.title {
			width: 700px;
			margin:0px;
			margin-left: 60px;
			padding-top: 140px;
			margin-top: 0px;
			text-align: left;
			color: $white;
			line-height: 1.2em;
		}
		a {
			width: 90%;	
		}
		
		.button-h {
			color: $white;
			border-color: $white;
			display: inline-block;
			position: static;
			margin-left: 60px;
			margin-top: 30px;
		}
		
		
		@media only screen and (max-width: 1170px) {
			height: 700px;
			h1.title {
				width: 600px;	
				font-size: 50px;
			}
		}
		
		@media only screen and (max-width: 950px) {
			height: 550px;
			h1.title {
				font-size: 45px;
			}
		}
		
		@media only screen and (max-width: 650px) {
			h1.title {
				width: 100%;	
				padding-right: 20px;
				padding-left: 20px;
				margin-left: 0px;
				margin: 0 auto;
				font-size: 45px;
				padding-top: 350px;
			}
			a {
				width: 80%;	
			}
			.button-h {
				margin-left:0px;
				width: 100%;
				margin:0 auto;
				margin-top: 30px;
				margin-left: 5%;
				text-align: center;
			}
		}
	}
	
}

#enterprise {
	#article-header {
		padding-bottom: 40px;
		margin-bottom: 100px;
	}
	
	.projects-row .project-item {
		.top-description {
			@media only screen and (max-width: 1194px) and (min-width: 654px) {
				min-height: 74px;	
			}
			@media only screen and (max-width: 654px) and (min-width: 640px) {
				min-height: 79px;	
			}
		}
	}
	
}

#healthcare {
	.projects-row .project-item {
		.top-description {
			@media only screen and (max-width: 674px) and (min-width: 640px) {
				min-height: 56px !important;	
			}
		}
	}
}
/* ... */

